--- a/style.css
+++ b/style.css
@@ -29,3 +29,23 @@ html {
   height: 200px;
   border: 4px solid purple;
 }
+
+.card:nth-child(1):hover {
+    transform: scale(1.05);
+    transition-duration: 0.7s;
+}
+
+.card:nth-child(2):hover {
+    transform: rotate(90deg);
+    transition-duration: 0.7s;
+}
+
+.card:nth-child(3):hover {
+    transform: rotateY(180deg);
+    transition-duration: 0.7s;
+}
+
+.card:nth-child(4):hover {
+    transform: translate(20px);
+    transition-duration: 1s;
+}
