--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ html {
   border: 4px solid purple;
 }
 
-.card:nth-child(1):hover {
+/* .card:nth-child(1):hover {
     transform: scale(1.05);
     transition-duration: 0.7s;
 }
@@ -48,4 +48,78 @@ html {
 .card:nth-child(4):hover {
     transform: translate(20px);
     transition-duration: 1s;
+} */
+
+.scalein {
+  animation: scalethecardin;
+  animation-duration: 0.5s;
+  animation-fill-mode: forwards;
+}
+
+.scaleout {
+  animation: scalethecardout;
+  animation-duration: 0.5s;
+  animation-fill-mode: forwards;
+}
+
+@keyframes scalethecardin {
+  from {
+    transform: scale(1);
+  }
+
+  to {
+    transform: scale(1.05);
+  }
+}
+
+@keyframes scalethecardout {
+  from {
+    transform: scale(1.05);
+  }
+
+  to {
+    transform: scale(1);
+  }
+}
+
+.rotatein {
+  animation: rotatethecardin;
+  animation-duration: 0.5s;
+  animation-fill-mode: forwards;
+}
+
+.rotateout {
+  animation: rotatethecardout;
+  animation-duration: 0.5s;
+  animation-fill-mode: forwards;
+}
+
+@keyframes rotatethecardin {
+  from {
+    transform: rotate(0deg);
+  }
+
+  to {
+    transform: rotate(90deg);
+  }
+}
+
+@keyframes rotatethecardout {
+    from {
+        transform: rotate(90deg);
+      }
+    
+      to {
+        transform: rotate(0deg);
+      }
+}
+
+.card:nth-child(3):hover {
+  transform: rotateY(180deg);
+  transition-duration: 0.7s;
+}
+
+.card:nth-child(4):hover {
+  transform: translate(20px);
+  transition-duration: 1s;
 }
